--- a/eCommerce.SharedLibrary/eCommerce.SharedLibrary.csproj
+++ b/eCommerce.SharedLibrary/eCommerce.SharedLibrary.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Global Exception\" />
+  </ItemGroup>
+
 </Project>
